[package]
authors = ["Dustin Knopoff <rust@knopoff.dev>"]
edition = "2018"
name = "reader"
version = "0.1.0"

[dependencies]
anyhow = "1.0.35"
url = "*"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.readability]
default-features = false
version = "*"

[dependencies.clap]
version = "3.0.0-beta.2"
